Added Variable Autocorrecting motor control
This new function takes a desired RPM, and adds, or subtracts the right
RPM to appropriately keep the rotational speed (DPS) the same.  Added
Controls and pneumatics stuff for shovel.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,1 +1,1 @@
-Fix Shovel Commands
+Make how much power we give the motor based on how fast it is going (to keep a consistand speed) FOR BOTH the rack and the shovel
